@@ -7,3 +7,5 @@ has been removed::
  - The Karma store must now be referenced as `pmxbot.karma:Karma.store` (a
    class attribute). It is no longer available as `pmxbot.pmxbot:karma` nor
    `pmxbot.util:karma` nor `pmxbot.karma.karma`.
+ - Similarly, the Quotes store must now be referenced as
+   `pmxbot.quotes:Quotes.store` (a class attribute).
